Completed the verify email before login
